# InputRedirectionClient-Android

./: .gitignore  LICENSE  README.md  README.zh_CN.md  settings.gradle
app/: build.gradle  makeDex.sh  release.jks
app/src/androidTest/java/com/jingrong/inputredirectionclient_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ScrCtl.dex  scrctl.sh
app/src/main/cpp/: AndroidOut.h  CMakeLists.txt  Config.h  Gamepad.h  JNIAdapt.cpp  JNIAdapt.h  Transmitter.cpp  Transmitter.h  main.cpp
app/src/main/cpp/tests/: CMakeLists.txt  TestHelpers.h  TestTransmitterConfig.cpp  TestTransmitterFrame.cpp  TestTransmitterFunctional.cpp  TestTransmitterIO.cpp  TestTransmitterKeyMapping.cpp  TestTransmitterSetters.cpp  main.cpp
app/src/main/cpp/tests/mocks/: AndroidOut.h  JNIAdapt.h  jni.h
app/src/main/cpp/tests/mocks/android/: log.h
app/src/main/cpp/tests/mocks/game-activity/native_app_glue/: android_native_app_glue.h
app/src/main/java/com/example/inputredirectionclient_android/: MainActivity.java
app/src/main/java/com/jingrong/inputredirectionclient_android/: MainActivity.java
app/src/main/java/com/jingrong/scrctl/: DisplayControl.java  ScrCtl.java
app/src/main/res/drawable/: btn_keymap_bg.xml  ic_about.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/jingrong/inputredirectionclient_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
